--- a/app/globals.css
+++ b/app/globals.css
@@ -21,5 +21,11 @@
 }
 
 body {
-  color: rgb(var(--background-start-rgb));  
+  background-color: rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground-rgb));
+    
+}
+
+h1 {
+  border: 1px solid #ff0000;
 }
